--- a/showcase.html
+++ b/showcase.html
@@ -9,23 +9,25 @@
         <h1>KAJORNKIETpage</h1>
         <div class="menu">
             <div>
-                <a href="index.html" class="button" style="background-color: rgba(0, 0, 0, 0.255);">Home</a>
-                <a href="showcase.html" class="button" style="background-color: rgba(0, 0, 0, 0.11);">Showcase</a>
+                <a href="index.html" class="button" style="background-color: rgba(0, 0, 0, 0.11);">Home</a>
+                <a href="showcase.html" class="button" style="background-color: rgba(0, 0, 0, 0.255);">Showcase</a>
                 <a href="resume.html" class="button" style="background-color: rgba(0, 0, 0, 0.11);">Resume</a>
             </div>
         </div>
     </div>
-        <div class ="profile">
-            <div id= "profileText" >
-                <p id="T1" >Hello, My name is</p>
-                <p id="T2">Kajornkiet</p>
-                <p>As a Computer Science student with a passion for Software Development and Artist, I have gained experience in creating websites and coding in Java, HTML/CSS, JavaScript and SQL through my coursework. I am a creative individual who is quick to learn and highly detail-oriented. I like drawing and 3d modeling sometimes. I also enjoy working collaboratively in a team environment to achieve shared goals.</p>
-            </div>
-            <div id="profile-img">
-                <img class="image" src="images/self.png" alt="Your Image"> 
+
+       <div class = "showcase">
+            <p style="font-weight: bold;margin: 0;padding: 0;text-decoration: underline; font-size: 20px;">Art Works Show Case</p>
+            <div>
+            <img  src="images/MNC.png" alt="Image1">
+            <img  src="images/Neon Donut.png" alt="Image2">
+            <img  src="images/Killer.png" alt="Image3">
+            <img  src="images/sion.png" alt="Image4">
+            <img  src="images/CharDesign.png" alt="Image5">
+            <img  src="images/JP_Board.jpg" alt="Image6">
             </div>
         </div>
-  
+     
 
     <div class ="footer">
         <p>CONTACT</p>
